task: Task: Introduction to Tags & Tags Usage

--- a/Task_HelloWorld/index.html
+++ b/Task_HelloWorld/index.html
@@ -11,5 +11,15 @@
     </div>
 
     <!-- Start coding below FOR HELLO WORLD TASK;  DO NOT TOUCH the code above -->
+
+    <!-- Answer to the problem-->
+    <h1>HELLO WORLD:</h1>
+
+    <p>In HTML, you can use various tags to format your content. For example, 
+        you can use the <b>Bold</b> tag to make text bold, the<i> Italic</i> tag to italicize text, 
+        and the <u>Underline</u> tag to underline text. Additionally,the
+        
+         <!--Using Break Tag-->
+        <br> tag is used to insert line breaks, creating new lines in your text.</p>
   </body>
 </html>
